inital libglade support
git-svn-id: svn://svn.code.sf.net/p/navit/code@67 ffa7fe5e-494d-0410-b361-a75ebd5db220

--- a/branches/libglade/navit/configure.in
+++ b/branches/libglade/navit/configure.in
@@ -10,7 +10,7 @@ fi
 
 # CFLAGS="$CFLAGS -DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED"
 
-pkg_modules="glib-2.0 gtk+-2.0 ORBit-2.0 freetype2"
+pkg_modules="glib-2.0 gtk+-2.0 ORBit-2.0 freetype2 libglade-2.0"
 PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
 AC_SUBST(PACKAGE_CFLAGS)
 AC_SUBST(PACKAGE_LIBS)
