--- a/branches/libglade/navit/src/gui/gtk/Makefile.am
+++ b/branches/libglade/navit/src/gui/gtk/Makefile.am
@@ -5,7 +5,8 @@ objdir=$(prefix)
 obj_PROGRAMS=gtk.o
 INSTALL_PROGRAM=/bin/true
 
-gtk_o_SOURCES=gtkeyboard.c gui_gtk_statusbar.c gui_gtk_action.c gui_gtk_window.c
+#gtk_o_SOURCES=gtkeyboard.c gui_gtk_statusbar.c gui_gtk_action.c gui_gtk_window.c
+gtk_o_SOURCES=gtkeyboard.c gui_gtk_statusbar.c gui_gtk.c
 
 gtk.o: $(gtk_o_OBJECTS)
 	ld -r -o gtk.o $(gtk_o_OBJECTS)
