--- a/branches/modular_map/navit/configure.in
+++ b/branches/modular_map/navit/configure.in
@@ -17,12 +17,39 @@ AC_SUBST(PACKAGE_LIBS)
 AC_CHECK_HEADER(libspeechd.h, AC_DEFINE([HAVE_LIBSPEECHD],[],Define to 1 if you have the <libspeechd.h> header file.) LIBS="$LIBS -lspeechd",  AC_MSG_WARN([*** no libspeechd.h -- Speech output disabled]))
 AC_CHECK_HEADER(gps.h, AC_DEFINE([HAVE_LIBGPS],[],Define to 1 if you have the <gps.h> header file.) LIBS="$LIBS -lgps",  AC_MSG_WARN([*** no gps.h -- gpsd support disabled]))
 
+AC_PATH_PROG(_PATH_PYTHON,[python])
+dnl Libraries and flags for embedded Python.
+dnl FIXME: I wish there was a less icky way to get this.
+if test x"$_PATH_PYTHON" != x ; then
+    AC_MSG_CHECKING(for Python linkage)
+    py_prefix=`$_PATH_PYTHON -c 'import sys; print sys.prefix'`
+    py_ver=`$_PATH_PYTHON -c 'import sys; print sys.version[[:3]]'`
+    py_libdir="${py_prefix}/lib/python${py_ver}"
+    PYTHON_INC="-I${py_prefix}/include/python${py_ver}"
+    py_libs=`grep '^LIBS=' $py_libdir/config/Makefile | sed -e 's/^.*=//'`
+    py_libc=`grep '^LIBC=' $py_libdir/config/Makefile | sed -e 's/^.*=//'`
+    py_libm=`grep '^LIBM=' $py_libdir/config/Makefile | sed -e 's/^.*=//'`
+    py_liblocalmod=`grep '^LOCALMODLIBS=' $py_libdir/config/Makefile | sed -e 's/^.*=//'`
+    py_libbasemod=`grep '^BASEMODLIBS=' $py_libdir/config/Makefile | sed -e 's/^.*=//'`
+    PYTHON_LIB="-L$py_libdir/config $py_libs $py_libc $py_libm -lpython$py_ver $py_liblocalmod $py_libbasemod"
+    PYTHON_LIB=`echo $PYTHON_LIB | sed -e 's/[ \\t]*/ /g'`
+    CFLAGS="$CFLAGS $PYTHON_INC"
+    LIBS="$LIBS $PYTHON_LIB"
+    AC_MSG_RESULT($py_libdir)
+else
+    PYTHON_LIB=""
+    PYTHON_INC=""
+fi
+AC_SUBST(PYTHON_LIB)
+AC_SUBST(PYTHON_INC)
 
 AC_CONFIG_SUBDIRS(src/fib-1.0)
 
 AC_OUTPUT([
 Makefile
 src/Makefile
+src/data/Makefile
+src/data/mg/Makefile
 src/gui/Makefile
 src/gui/gtk/Makefile
 src/graphics/Makefile
