Made data/mg a plugin, integrated xml config (thanks Horwitz)
git-svn-id: svn://svn.code.sf.net/p/navit/code@81 ffa7fe5e-494d-0410-b361-a75ebd5db220

--- a/branches/modular_map/navit/src/data/mg/Makefile.am
+++ b/branches/modular_map/navit/src/data/mg/Makefile.am
@@ -1,11 +1,11 @@
 AUTOMAKE_OPTIONS = no-exeext
-AM_CPPFLAGS = @PACKAGE_CFLAGS@ -I../..
+AM_CPPFLAGS = @PACKAGE_CFLAGS@ -I../.. -shared
 
 objdir=$(prefix)
-obj_PROGRAMS=mg.o
+obj_PROGRAMS=mg.so
 INSTALL_PROGRAM=/bin/true
 
-mg_o_SOURCES=map.c block.c town.c poly.c street.c
+mg_so_SOURCES=map.c block.c town.c poly.c street.c
 
-mg.o: $(mg_o_OBJECTS)
-	ld -r -o mg.o $(mg_o_OBJECTS)
+mg.so: $(mg_so_OBJECTS)
+	$(CC) $(CFLAGS) -shared -o $@ $(mg_so_OBJECTS)
