Renamed config.[ch] to xmlconfig.[ch] to avoid name clash with config.h
git-svn-id: svn://svn.code.sf.net/p/navit/code@83 ffa7fe5e-494d-0410-b361-a75ebd5db220

--- a/branches/modular_map/navit/src/Makefile.am
+++ b/branches/modular_map/navit/src/Makefile.am
@@ -13,11 +13,11 @@ navit_SOURCES = compass.c config.c coord.c country.c cursor.c data_window.c debu
 	display.c file.c graphics.c item.c log.c main.c map.c \
 	mapset.c maptype.c menu.c navigation.c param.c phrase.c plugin.c popup.c \
 	profile.c python.c route.c search.c speech.c transform.c track.c \
-	util.c vehicle.c block.h compass.h config.h container.h coord.h country.h \
+	util.c vehicle.c xmlconfig.c block.h compass.h container.h coord.h country.h \
 	cursor.h data.h data_window.h data_window_int.h debug.h destination.h display.h draw_info.h \
 	file.h graphics.h gtkext.h log.h main.h map-share.h map.h map_data.h mapset.h maptype.h menu.h navigation.h \
 	param.h phrase.h plugin.h point.h popup.h route.h search.h speech.h statusbar.h \
-	toolbar.h transform.h track.h util.h vehicle.h
+	toolbar.h transform.h track.h util.h vehicle.h xmlconfig.h
 
 navit_LDADD = @PACKAGE_LIBS@ gui/gtk/gtk.o graphics/gtk_drawing_area/gtk_drawing_area.o -Lfib-1.0 -lfib
 
