Cross compile fixes
git-svn-id: svn://svn.code.sf.net/p/navit/code@96 ffa7fe5e-494d-0410-b361-a75ebd5db220

--- a/branches/modular_map/navit/src/graphics/gtk_drawing_area/Makefile.am
+++ b/branches/modular_map/navit/src/graphics/gtk_drawing_area/Makefile.am
@@ -8,4 +8,4 @@ INSTALL_PROGRAM=/bin/true
 gtk_drawing_area_o_SOURCES=graphics_gtk_drawing_area.c
 
 gtk_drawing_area.o: $(gtk_drawing_area_o_OBJECTS)
-	ld -r -o gtk_drawing_area.o $(gtk_drawing_area_o_OBJECTS)
+	$(CC) -shared -o gtk_drawing_area.o $(gtk_drawing_area_o_OBJECTS)
