--- a/branches/modular_map/navit/src/gui/gtk/Makefile.am
+++ b/branches/modular_map/navit/src/gui/gtk/Makefile.am
@@ -8,4 +8,4 @@ INSTALL_PROGRAM=/bin/true
 gtk_o_SOURCES=gtkeyboard.c gui_gtk_statusbar.c gui_gtk_action.c gui_gtk_window.c
 
 gtk.o: $(gtk_o_OBJECTS)
-	ld -r -o gtk.o $(gtk_o_OBJECTS)
+	$(CC) -shared -o gtk.o $(gtk_o_OBJECTS)
