Cross compile fix and missing initialisation
git-svn-id: svn://svn.code.sf.net/p/navit/code@97 ffa7fe5e-494d-0410-b361-a75ebd5db220

--- a/branches/modular_map/navit/src/Makefile.am
+++ b/branches/modular_map/navit/src/Makefile.am
@@ -20,5 +20,5 @@ navit_SOURCES = compass.c coord.c country.c cursor.c data_window.c debug.c desti
 	param.h phrase.h plugin.h point.h popup.h route.h search.h speech.h statusbar.h \
 	toolbar.h transform.h track.h util.h vehicle.h xmlconfig.h
 
-navit_LDADD = @PACKAGE_LIBS@ gui/gtk/gtk.o graphics/gtk_drawing_area/gtk_drawing_area.o -Lfib-1.0 -lfib
+navit_LDADD = @PACKAGE_LIBS@ gui/gtk/gtk.so graphics/gtk_drawing_area/gtk_drawing_area.so -Lfib-1.0 -lfib
 
