--- a/branches/modular_map/navit/src/gui/gtk/Makefile.am
+++ b/branches/modular_map/navit/src/gui/gtk/Makefile.am
@@ -2,10 +2,10 @@ AUTOMAKE_OPTIONS = no-exeext
 AM_CPPFLAGS = @PACKAGE_CFLAGS@ -I../..
 
 objdir=$(prefix)
-obj_PROGRAMS=gtk.o
+obj_PROGRAMS=gtk.so
 INSTALL_PROGRAM=/bin/true
 
-gtk_o_SOURCES=gtkeyboard.c gui_gtk_statusbar.c gui_gtk_action.c gui_gtk_window.c
+gtk_so_SOURCES=gtkeyboard.c gui_gtk_statusbar.c gui_gtk_action.c gui_gtk_window.c
 
-gtk.o: $(gtk_o_OBJECTS)
-	$(CC) -shared -o gtk.o $(gtk_o_OBJECTS)
+gtk.so: $(gtk_so_OBJECTS)
+	$(CC) -shared -o gtk.so $(gtk_so_OBJECTS)
