--- a/branches/modular_map/navit/configure.in
+++ b/branches/modular_map/navit/configure.in
@@ -56,6 +56,7 @@ Makefile
 src/Makefile
 src/data/Makefile
 src/data/mg/Makefile
+src/data/textfile/Makefile
 src/gui/Makefile
 src/gui/gtk/Makefile
 src/graphics/Makefile
