New data source: garmin_img
git-svn-id: svn://svn.code.sf.net/p/navit/code@124 ffa7fe5e-494d-0410-b361-a75ebd5db220

--- a/branches/modular_map/navit/configure.in
+++ b/branches/modular_map/navit/configure.in
@@ -57,6 +57,7 @@ src/Makefile
 src/data/Makefile
 src/data/mg/Makefile
 src/data/textfile/Makefile
+src/data/garmin_img/Makefile
 src/gui/Makefile
 src/gui/gtk/Makefile
 src/graphics/Makefile
