--- a/branches/modular_map/navit/configure.in
+++ b/branches/modular_map/navit/configure.in
@@ -10,15 +10,15 @@ fi
 
 # CFLAGS="$CFLAGS -DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED"
 
-AC_ARG_ENABLE(unaligned,
-[  --disable-unaligned          avoid unaligned accesses],
-USE_UNALIGNED=$enableval, USE_UNALIGNED=yes)
-test x"${USE_UNALIGNED}" = xyes && AC_DEFINE(USE_UNALIGNED,[],Define to allow unaligned access)
+AC_ARG_ENABLE(avoid-unaligned,
+[  --enable-avoid-unaligned          avoid unaligned accesses],
+AVOID_UNALIGNED=$enableval, AVOID_UNALIGNED=no)
+test x"${AVOID_UNALIGNED}" = xyes && AC_DEFINE(AVOID_UNALIGNED,[],Define to avoid unaligned access)
 
-AC_ARG_ENABLE(float,
-[  --disable-float              avoid floating point calculations],
-USE_FLOAT=$enableval, USE_FLOAT=yes)
-test x"${USE_FLOAT}" = xyes && AC_DEFINE(USE_FLOAT,[],Define to use floating point)
+AC_ARG_ENABLE(avoid-float,
+[  --enable-avoid-float              avoid floating point calculations],
+AVOID_FLOAT=$enableval, AVOID_FLOAT=no)
+test x"${AVOID_FLOAT}" = xyes && AC_DEFINE(AVOID_FLOAT,[],Define to avoid floating point)
 
 AC_ARG_ENABLE(libgps,
 [  --disable-libgps             don't use libgps],
