--- a/branches/modular_map/navit/src/data/garmin_img/Makefile.am
+++ b/branches/modular_map/navit/src/data/garmin_img/Makefile.am
@@ -1,11 +1,3 @@
-AUTOMAKE_OPTIONS = no-exeext
-AM_CPPFLAGS = @PACKAGE_CFLAGS@ -I../.. -shared
-
-objdir=$(prefix)
-obj_PROGRAMS=garmin_img.so
-INSTALL_PROGRAM=/bin/true
-
-garmin_img_so_SOURCES=garmin_img.c
-
-garmin_img.so: $(garmin_img_so_OBJECTS)
-	$(CC) $(CFLAGS) -shared -o $@ $(garmin_img_so_OBJECTS)
+AM_CPPFLAGS = @PACKAGE_CFLAGS@ -I../..
+pkglib_LTLIBRARIES = libdata_garmin_img.la
+libdata_garmin_img_la_SOURCES = garmin_img.c
