--- a/branches/modular_map/navit/src/data/mg/Makefile.am
+++ b/branches/modular_map/navit/src/data/mg/Makefile.am
@@ -1,11 +1,3 @@
-AUTOMAKE_OPTIONS = no-exeext
-AM_CPPFLAGS = @PACKAGE_CFLAGS@ -I../.. -shared
-
-objdir=$(prefix)
-obj_PROGRAMS=mg.so
-INSTALL_PROGRAM=/bin/true
-
-mg_so_SOURCES=map.c block.c town.c poly.c street.c
-
-mg.so: $(mg_so_OBJECTS)
-	$(CC) $(CFLAGS) -shared -o $@ $(mg_so_OBJECTS)
+AM_CPPFLAGS = @PACKAGE_CFLAGS@ -I../..
+pkglib_LTLIBRARIES = libdata_mg.la
+libdata_mg_la_SOURCES = map.c block.c town.c poly.c street.c mg.h
