--- a/branches/modular_map/navit/src/data/textfile/Makefile.am
+++ b/branches/modular_map/navit/src/data/textfile/Makefile.am
@@ -1,11 +1,3 @@
-AUTOMAKE_OPTIONS = no-exeext
-AM_CPPFLAGS = @PACKAGE_CFLAGS@ -I../.. -shared
-
-objdir=$(prefix)
-obj_PROGRAMS=textfile.so
-INSTALL_PROGRAM=/bin/true
-
-textfile_so_SOURCES=textfile.c
-
-textfile.so: $(textfile_so_OBJECTS)
-	$(CC) $(CFLAGS) -shared -o $@ $(textfile_so_OBJECTS)
+AM_CPPFLAGS = @PACKAGE_CFLAGS@ -I../..
+pkglib_LTLIBRARIES = libdata_textfile.la
+libdata_textfile_la_SOURCES = textfile.c textfile.h
