--- a/branches/modular_map/navit/src/gui/gtk/Makefile.am
+++ b/branches/modular_map/navit/src/gui/gtk/Makefile.am
@@ -1,11 +1,3 @@
-AUTOMAKE_OPTIONS = no-exeext
 AM_CPPFLAGS = @PACKAGE_CFLAGS@ -I../..
-
-objdir=$(prefix)
-obj_PROGRAMS=gtk.so
-INSTALL_PROGRAM=/bin/true
-
-gtk_so_SOURCES=gtkeyboard.c gui_gtk_statusbar.c gui_gtk_action.c gui_gtk_window.c
-
-gtk.so: $(gtk_so_OBJECTS)
-	$(CC) -shared -o gtk.so $(gtk_so_OBJECTS)
+pkglib_LTLIBRARIES = libgui_gtk.la
+libgui_gtk_la_SOURCES = gtkeyboard.c gui_gtk_statusbar.c gui_gtk_action.c gui_gtk_window.c gtkeyboard.h gui_gtk.h
