--- a/branches/modular_map/navit/configure.in
+++ b/branches/modular_map/navit/configure.in
@@ -27,7 +27,7 @@ AC_ARG_ENABLE(libgps,
 [  --disable-libgps             don't use libgps],
 USE_LIBGPS=$enableval, USE_LIBGPS=yes)
 
-pkg_modules="glib-2.0 gtk+-2.0 ORBit-2.0 freetype2"
+pkg_modules="glib-2.0 gtk+-2.0 freetype2"
 PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
 PKG_CHECK_MODULES(IMLIB2, [imlib2], [imlib2_pkgconfig=yes], [imlib2_pkgconfig=no])
 if test "x$imlib2_pkgconfig" = "xyes"; then
