--- a/branches/modular_map/navit/src/graphics/gtk_drawing_area/Makefile.am
+++ b/branches/modular_map/navit/src/graphics/gtk_drawing_area/Makefile.am
@@ -1,3 +1,4 @@
+include $(top_srcdir)/Makefile.inc
 AM_CPPFLAGS = @PACKAGE_CFLAGS@ -I../..
-pkglib_LTLIBRARIES = libgraphics_gtk_drawing_area.la
+plugin_LTLIBRARIES = libgraphics_gtk_drawing_area.la
 libgraphics_gtk_drawing_area_la_SOURCES = graphics_gtk_drawing_area.c
