--- a/branches/modular_map/navit/src/gui/gtk/Makefile.am
+++ b/branches/modular_map/navit/src/gui/gtk/Makefile.am
@@ -1,3 +1,4 @@
+include $(top_srcdir)/Makefile.inc
 AM_CPPFLAGS = @PACKAGE_CFLAGS@ -I../..
-pkglib_LTLIBRARIES = libgui_gtk.la
+plugin_LTLIBRARIES = libgui_gtk.la
 libgui_gtk_la_SOURCES = gtkeyboard.c gui_gtk_statusbar.c gui_gtk_action.c gui_gtk_window.c gtkeyboard.h gui_gtk.h
