--- a/branches/modular_map/navit/src/data/garmin_img/Makefile.am
+++ b/branches/modular_map/navit/src/data/garmin_img/Makefile.am
@@ -1,3 +1,4 @@
+include $(top_srcdir)/Makefile.inc
 AM_CPPFLAGS = @PACKAGE_CFLAGS@ -I../..
-pkglib_LTLIBRARIES = libdata_garmin_img.la
+plugin_LTLIBRARIES = libdata_garmin_img.la
 libdata_garmin_img_la_SOURCES = garmin_img.c
