Fixed a few bugs
git-svn-id: svn://svn.code.sf.net/p/navit/code@165 ffa7fe5e-494d-0410-b361-a75ebd5db220

--- a/branches/modular_map/navit/configure.in
+++ b/branches/modular_map/navit/configure.in
@@ -88,5 +88,6 @@ src/gui/Makefile
 src/gui/gtk/Makefile
 src/graphics/Makefile
 src/graphics/gtk_drawing_area/Makefile
+src/graphics/null/Makefile
 src/xpm/Makefile
 ])
