--- a/branches/modular_map/navit/configure.in
+++ b/branches/modular_map/navit/configure.in
@@ -7,6 +7,11 @@ AC_PROG_CC
 if eval "test x$GCC = xyes"; then
         CFLAGS="$CFLAGS -Wall -Wcast-align -Wmissing-declarations -Wmissing-prototypes -Wstrict-prototypes -Wpointer-arith -Wreturn-type -D_GNU_SOURCE"
 fi
+AC_PROG_CXX
+if eval "test x$G++ = xyes"; then
+        CFLAGS="$CFLAGS -Wall -Wcast-align -Wmissing-declarations -Wmissing-prototypes -Wstrict-prototypes -Wpointer-arith -Wreturn-type -D_GNU_SOURCE"
+	fi
+
 
 # CFLAGS="$CFLAGS -DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED"
 
@@ -89,6 +94,7 @@ src/data/textfile/Makefile
 src/data/garmin_img/Makefile
 src/gui/Makefile
 src/gui/gtk/Makefile
+src/gui/sdl/Makefile
 src/graphics/Makefile
 src/graphics/gtk_drawing_area/Makefile
 src/graphics/null/Makefile
