--- a/branches/sdl/navit/configure.in
+++ b/branches/sdl/navit/configure.in
@@ -7,6 +7,10 @@ AC_PROG_CC
 if eval "test x$GCC = xyes"; then
         CFLAGS="$CFLAGS -Wall -Wcast-align -Wmissing-declarations -Wmissing-prototypes -Wstrict-prototypes -Wpointer-arith -Wreturn-type -D_GNU_SOURCE"
 fi
+AC_PROG_CXX
+if eval "test x$G++ = xyes"; then
+        CFLAGS="$CFLAGS -Wall -Wcast-align -Wmissing-declarations -Wmissing-prototypes -Wstrict-prototypes -Wpointer-arith -Wreturn-type -D_GNU_SOURCE"
+	fi
 
 # CFLAGS="$CFLAGS -DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED"
 
@@ -14,9 +18,9 @@ pkg_modules="glib-2.0 gtk+-2.0 ORBit-2.0 freetype2"
 PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
 AC_SUBST(PACKAGE_CFLAGS)
 AC_SUBST(PACKAGE_LIBS)
-#AC_CHECK_HEADER(libspeechd.h, AC_DEFINE([HAVE_LIBSPEECHD],[],Define to 1 if you have the <libspeechd.h> header file.) LIBS="$LIBS -lspeechd",  AC_MSG_WARN([*** no libspeechd.h -- Speech output disabled]))
+AC_CHECK_HEADER(libspeechd.h, AC_DEFINE([HAVE_LIBSPEECHD],[],Define to 1 if you have the <libspeechd.h> header file.) LIBS="$LIBS -lspeechd",  AC_MSG_WARN([*** no libspeechd.h -- Speech output disabled]))
 AC_CHECK_HEADER(gps.h, AC_DEFINE([HAVE_LIBGPS],[],Define to 1 if you have the <gps.h> header file.) LIBS="$LIBS -lgps",  AC_MSG_WARN([*** no gps.h -- gpsd support disabled]))
-AC_CHECK_HEADER(SDL/SDL.h, AC_DEFINE([HAVE_LIBSDL],[],Define to 1 if you have the <sdl.h> header file.) LIBS="$LIBS -lSDL -lpthread  -lSDL_image -lSDL_gfx -lSDL_ttf -lGL -lGLU -lfreetype -lz", AC_MSG_WARN([*** no sdl.h -- SDL support disabled]))
+AC_CHECK_HEADER(SDL/SDL.h, AC_DEFINE([HAVE_LIBSDL],[],Define to 1 if you have the <sdl.h> header file.) LIBS="$LIBS -lSDL -lpthread  -lSDL_mixer -lGL -lGLU -lz", AC_MSG_WARN([*** no sdl.h -- SDL support disabled]))
 
 AC_CONFIG_SUBDIRS(src/fib-1.0)
 
@@ -25,9 +29,11 @@ Makefile
 src/Makefile
 src/gui/Makefile
 src/gui/gtk/Makefile
+src/gui/sdl/Makefile
 src/graphics/Makefile
 src/graphics/gtk_drawing_area/Makefile
 src/plugins/Makefile
+src/plugins/sdl_music_player/Makefile
 src/plugins/poi_geodownload/Makefile
 src/plugins/poi_geodownload/libmdb/Makefile
 ])
