--- a/branches/modular_map/navit/src/gui/sdl/Makefile.am
+++ b/branches/modular_map/navit/src/gui/sdl/Makefile.am
@@ -1,5 +1,5 @@
 include $(top_srcdir)/Makefile.inc
 AM_CPPFLAGS = @PACKAGE_CFLAGS@ -I../..
 plugin_LTLIBRARIES = libgui_sdl.la
-libgui_sdl_la_SOURCES = gui_sdl_window.c
+libgui_sdl_la_SOURCES = gui_sdl_window.cpp
 libgui_sdl_la_LIBADD = -lSDL
