Gui in progress
git-svn-id: svn://svn.code.sf.net/p/navit/code@212 ffa7fe5e-494d-0410-b361-a75ebd5db220

--- a/branches/modular_map/navit/src/gui/sdl/Makefile.am
+++ b/branches/modular_map/navit/src/gui/sdl/Makefile.am
@@ -2,4 +2,4 @@ include $(top_srcdir)/Makefile.inc
 AM_CPPFLAGS = @PACKAGE_CFLAGS@ -I../.. -I/usr/include/CEGUI -I/usr/include/freetype2 -I/usr/include/SDL
 plugin_LTLIBRARIES = libgui_sdl.la
 libgui_sdl_la_SOURCES = gui_sdl_window.cpp
-libgui_sdl_la_LIBADD = -lCEGUIBase -lCEGUIOpenGLRenderer
+libgui_sdl_la_LIBADD = -lSDL -lCEGUIBase -lCEGUIOpenGLRenderer
