Added loading from ~/.navit/navit.xml by default
git-svn-id: svn://svn.code.sf.net/p/navit/code@219 ffa7fe5e-494d-0410-b361-a75ebd5db220

--- a/branches/modular_map/navit/src/Makefile.am
+++ b/branches/modular_map/navit/src/Makefile.am
@@ -9,8 +9,8 @@ AM_CPPFLAGS = @PACKAGE_CFLAGS@ @IMLIB2_CFLAGS@ -DMODULE=\"navit\"
 
 bin_PROGRAMS = navit
 
-pkglib_DATA = navit.xml
-EXTRA_DIST = navit.xml
+#pkglib_DATA = navit.xml
+#EXTRA_DIST = navit.xml
 
 navit_SOURCES = attr.c compass.c coord.c country.c cursor.c data_window.c debug.c destination.c \
 	file.c graphics.c gui.c item.c layout.c log.c main.c map.c \
