Initial try for an OpenGL driver
git-svn-id: svn://svn.code.sf.net/p/navit/code@220 ffa7fe5e-494d-0410-b361-a75ebd5db220

--- a/branches/modular_map/navit/configure.in
+++ b/branches/modular_map/navit/configure.in
@@ -97,6 +97,7 @@ src/gui/gtk/Makefile
 src/gui/sdl/Makefile
 src/graphics/Makefile
 src/graphics/gtk_drawing_area/Makefile
+src/graphics/opengl/Makefile
 src/graphics/null/Makefile
 src/xpm/Makefile
 ])
