--- a/branches/modular_map/navit/src/Makefile.am
+++ b/branches/modular_map/navit/src/Makefile.am
@@ -12,11 +12,11 @@ bin_PROGRAMS = navit
 #pkglib_DATA = navit.xml
 #EXTRA_DIST = navit.xml
 
-navit_SOURCES = attr.c compass.c coord.c country.c cursor.c data_window.c debug.c \
+navit_SOURCES = attr.c callback.c compass.c coord.c country.c cursor.c data_window.c debug.c \
 	file.c graphics.c gui.c item.c layout.c log.c main.c map.c \
 	mapset.c maptype.c menu.c navit.c navigation.c param.c phrase.c plugin.c popup.c \
 	profile.c python.c route.c search.c speech.c transform.c track.c \
-	util.c vehicle.c xmlconfig.c attr.h attr_def.h color.h compass.h coord.h country.h \
+	util.c vehicle.c xmlconfig.c attr.h attr_def.h callback.h color.h compass.h coord.h country.h \
 	cursor.h data.h data_window.h data_window_int.h debug.h destination.h draw_info.h \
 	file.h graphics.h gtkext.h gui.h item.h item_def.h log.h layout.h main.h map-share.h map.h\
 	map_data.h mapset.h maptype.h menu.h navigation.h navit.h \
