Fixed a missing path
git-svn-id: svn://svn.code.sf.net/p/navit/code@253 ffa7fe5e-494d-0410-b361-a75ebd5db220

--- a/branches/modular_map/navit/configure.in
+++ b/branches/modular_map/navit/configure.in
@@ -111,6 +111,7 @@ src/data/textfile/Makefile
 src/data/garmin_img/Makefile
 src/gui/Makefile
 src/gui/gtk/Makefile
+src/gui/sdl/Makefile
 src/graphics/Makefile
 src/graphics/gtk_drawing_area/Makefile
 src/graphics/opengl/Makefile
