--- a/branches/modular_map/navit/configure.in
+++ b/branches/modular_map/navit/configure.in
@@ -10,7 +10,7 @@ fi
 AC_PROG_CXX
 if eval "test x$G++ = xyes"; then
         CFLAGS="$CFLAGS -Wall -Wcast-align -Wmissing-declarations -Wmissing-prototypes -Wstrict-prototypes -Wpointer-arith -Wreturn-type -D_GNU_SOURCE"
-	fi
+fi
 
 
 # CFLAGS="$CFLAGS -DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGDK_PIXBUF_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED"
@@ -32,32 +32,83 @@ AC_ARG_ENABLE(libgps,
 [  --disable-libgps             don't use libgps],
 USE_LIBGPS=$enableval, USE_LIBGPS=yes)
 
-pkg_modules="glib-2.0 gtk+-2.0 freetype2"
-PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
+PKG_CHECK_MODULES(NAVIT, [glib-2.0])
+AC_SUBST(NAVIT_CFLAGS)
+AC_SUBST(NAVIT_LIBS)
+
+PKG_CHECK_MODULES(GTK2, [gtk+-2.0], [gtk2_pkgconfig=yes], [gtk2_pkgconfig=no])
+if test "x$gtk2_pkgconfig" = "xyes"; then
+   AC_DEFINE(HAVE_GTK2, 1, [Define to 1 if you have imlib2])
+fi
+AC_SUBST(GTK2_CFLAGS)
+AC_SUBST(GTK2_LIBS)
+
+PKG_CHECK_MODULES(FREETYPE2, [freetype2], [freetype2_pkgconfig=yes], [freetype2_pkgconfig=no])
+if test "x$freetype2_pkgconfig" = "xyes"; then
+   AC_DEFINE(HAVE_FREETYPE2, 1, [Define to 1 if you have imlib2])
+fi
+AC_SUBST(FREETYPE2_CFLAGS)
+AC_SUBST(FREETYPE2_LIBS)
+
 PKG_CHECK_MODULES(IMLIB2, [imlib2], [imlib2_pkgconfig=yes], [imlib2_pkgconfig=no])
 if test "x$imlib2_pkgconfig" = "xyes"; then
    AC_DEFINE(HAVE_IMLIB2, 1, [Define to 1 if you have imlib2])
 fi
-AC_SUBST(PACKAGE_CFLAGS)
-AC_SUBST(PACKAGE_LIBS)
 AC_SUBST(IMLIB2_CFLAGS)
 AC_SUBST(IMLIB2_LIBS)
-AC_CHECK_HEADER(libspeechd.h, AC_DEFINE([HAVE_LIBSPEECHD],[],Define to 1 if you have the <libspeechd.h> header file.) LIBS="$LIBS -lspeechd",  AC_MSG_WARN([*** no libspeechd.h -- Speech output disabled]))
+
+AC_CHECK_HEADER(libspeechd.h, AC_DEFINE([HAVE_LIBSPEECHD],[],Define to 1 if you have the <libspeechd.h> header file.) SPEECHD_LIBS="-lspeechd",  AC_MSG_WARN([*** no libspeechd.h -- Speech output disabled]))
+AC_SUBST(SPEECHD_CFLAGS)
+AC_SUBST(SPEECHD_LIBS)
+
 AC_CHECK_HEADER(
 	SDL/SDL.h,
 	AC_DEFINE(
 		[HAVE_LIBSDL],
 		[],
-		Define to 1 if you have the <sdl.h> header file.
+		Define to 1 if you have the <SDL/SDL.h> header file.
 		)
-		LIBS="$LIBS -lSDL -lpthread  -lSDL_image -lSDL_gfx -lSDL_ttf -lGL -lGLU -lfreetype -lz"
-		GUI_OPTIONAL_DIRS=sdl
-		GRAPHICS_OPTIONAL_DIRS=opengl,
-	AC_MSG_WARN([*** no sdl.h -- SDL support disabled])
+		SDL_LIBS="-lSDL"
+		sdl=yes,
+	AC_MSG_WARN([*** no SDL/SDL.h -- SDL support disabled])
 )
-AC_SUBST([GUI_OPTIONAL_DIRS])
-AC_SUBST([GRAPHICS_OPTIONAL_DIRS])
+AC_SUBST(SDL_CFLAGS)
+AC_SUBST(SDL_LIBS)
 
+AC_PREPROC_IFELSE(
+	CEGUI/CEGUI.h,
+	AC_DEFINE(
+		[HAVE_CEGUI],
+		[],
+		Define to 1 if you have the <CEGUI/CEGUI.h> header file.
+		)
+		CEGUI_LIBS="-lCEGUIBase -lCEGUIOpenGLRenderer"
+		CEGUI_CFLAGS="-I /usr/local/include/CEGUI -I /usr/include/CEGUI"
+		cegui=yes,
+	AC_MSG_WARN([*** no CEGUI/CEGUI.h -- SDL support disabled])
+	exit 1
+)
+AC_SUBST(CEGUI_CFLAGS)
+AC_SUBST(CEGUI_LIBS)
+
+AC_CHECK_HEADER(
+	GL/gl.h,
+	AC_DEFINE(
+		[HAVE_OPENGL],
+		[],
+		Define to 1 if you have the <GL/gl.h> header file.
+		)
+		OPENGL_LIBS="-lGL -lGLU -lGLC"
+		opengl=yes,
+	AC_MSG_WARN([*** no GL/gl.h -- opengl and SDL support disabled])
+)
+AC_SUBST(OPENGL_CFLAGS)
+AC_SUBST(OPENGL_LIBS)
+
+AM_CONDITIONAL(GUI_SDL, [test "x$sdl" = "xyes" -a "x$cegui" = "xyes" -a "x$opengl" = "xyes" ])
+AM_CONDITIONAL(GUI_GTK, [test "x$gtk2_pkgconfig" = "xyes"])
+AM_CONDITIONAL(GRAPHICS_OPENGL, [test "x$opengl" = "xyes"])
+AM_CONDITIONAL(GRAPHICS_GTK_DRAWING_AREA, [test "x$sdl" = "xyes"])
 
 if test x"${USE_LIBGPS}" = xyes
 then
@@ -100,7 +151,6 @@ AC_SUBST(PYTHON_INC)
 AC_CONFIG_SUBDIRS(src/fib-1.0)
 
 LIBS="$LIBS -rdynamic"
-
 
 AC_OUTPUT([
 Makefile
