--- a/branches/modular_map/navit/src/data/textfile/Makefile.am
+++ b/branches/modular_map/navit/src/data/textfile/Makefile.am
@@ -1,4 +1,4 @@
 include $(top_srcdir)/Makefile.inc
-AM_CPPFLAGS = @PACKAGE_CFLAGS@ -I../..
+AM_CPPFLAGS = @NAVIT_CFLAGS@ -I../..
 plugin_LTLIBRARIES = libdata_textfile.la
 libdata_textfile_la_SOURCES = textfile.c textfile.h
